--- a/2-evitar-pausa/index.html
+++ b/2-evitar-pausa/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 		<h1>Reconocimiento de voz en la web</h1>
-		<a href="//parzibyte.me/blog">By parzibyte</a>
+		<a href="">By mi</a>
 		<p>Abre la consola con F12</p>
     <script src="script.js"></script>
   </body>
