--- a/3-demo/index.html
+++ b/3-demo/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 		<h1>Reconocimiento de voz en la web</h1>
-		<a href="//parzibyte.me/blog">By parzibyte</a>
+		<a href="">By mi</a>
 		<p id="texto"></p>
     <script src="script.js"></script>
   </body>
